--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,5 +25,6 @@ jobs:
       - name: Run tests
         env:
           PYTHONPATH: .
+          ENVIRONMENT: test
         run: |
           pytest -q
